# langchain-vectorizing-webservice

./: .env.example  .gitignore  Dockerfile  README.md  docker-compose.yaml  openapi.json  pyproject.toml
kubernetes/: pgvector-deployment.yaml  pgvector-service.yaml  pgvectordata-persistentvolumeclaim.yaml  vectorator-namespace.yaml  vectorizer-deployment.yaml  vectorizer-service.yaml
src/: app.py  embedder.py  memory.py  vectorstore.py
