[tool.poetry]
name = "vectorator"
version = "0.1.0"
description = ""
authors = ["Justin Guese <guese.justin@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
langchain-postgres = "^0.0.9"
sentence-transformers = "^3.0.1"
langchain-huggingface = "^0.0.3"
langchain = "^0.2.9"
langchainhub = "^0.1.20"
psycopg2-binary = "^2.9.9"
fastapi = "^0.112.0"
uvicorn = "^0.30.5"
langchain-community = "^0.2.12"
openai = "^1.40.6"
langchain-openai = "^0.1.21"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
